Expand Resources section with subpages for Ten Essentials, Packing List, and Join BSA

--- a/resources.html
+++ b/resources.html
@@ -87,9 +87,9 @@
                 <h3 style="font-size: 1.125rem; margin-bottom: 0.5rem;">Essential Forms</h3>
                 <p style="color: var(--slate-500); font-size: 0.8125rem; margin-bottom: 1.5rem; line-height: 1.5;">
                     Medical consent and activity permission slips for all scouts.</p>
-                <a href="#forms"
+                <a href="resources/ten-essentials.html"
                     style="color: var(--primary); font-weight: 700; font-size: 0.8125rem; display: inline-flex; align-items: center; gap: 0.4rem;">
-                    Browse Forms <span class="material-symbols-outlined"
+                    Browse Essentials <span class="material-symbols-outlined"
                         style="font-size: 1.125rem;">arrow_forward</span>
                 </a>
             </div>
@@ -103,9 +103,10 @@
                 <h3 style="font-size: 1.125rem; margin-bottom: 0.5rem;">Camping Lists</h3>
                 <p style="color: var(--slate-500); font-size: 0.8125rem; margin-bottom: 1.5rem; line-height: 1.5;">
                     Packing lists for summer camp and weekend troop trips.</p>
-                <a href="#checklists"
+                <a href="resources/packing-list.html"
                     style="color: var(--primary); font-weight: 700; font-size: 0.8125rem; display: inline-flex; align-items: center; gap: 0.4rem;">
-                    Get Ready <span class="material-symbols-outlined" style="font-size: 1.125rem;">arrow_forward</span>
+                    View Packing List <span class="material-symbols-outlined"
+                        style="font-size: 1.125rem;">arrow_forward</span>
                 </a>
             </div>
             <!-- Merit Badge Card -->
@@ -118,9 +119,9 @@
                 <h3 style="font-size: 1.125rem; margin-bottom: 0.5rem;">Merit Badge Info</h3>
                 <p style="color: var(--slate-500); font-size: 0.8125rem; margin-bottom: 1.5rem; line-height: 1.5;">Blue
                     cards and digital workbooks for advancement.</p>
-                <a href="#merit-badges"
+                <a href="resources/join-bsa.html"
                     style="color: var(--primary); font-weight: 700; font-size: 0.8125rem; display: inline-flex; align-items: center; gap: 0.4rem;">
-                    View Requirements <span class="material-symbols-outlined"
+                    Join the Adventure <span class="material-symbols-outlined"
                         style="font-size: 1.125rem;">arrow_forward</span>
                 </a>
             </div>
