Rename Essential Forms card to 10 Essentials on Resources page

--- a/resources.html
+++ b/resources.html
@@ -77,16 +77,16 @@
         <!-- Categories Grid -->
         <div class="grid md-grid-cols-3 gap-6"
             style="margin-bottom: 4rem; margin-top: -1.5rem; position: relative; z-index: 20;">
-            <!-- Forms Card -->
+            <!-- 10 Essentials Card -->
             <div class="card" style="padding: 1.75rem; text-align: center;">
                 <div
                     style="width: 3.5rem; height: 3.5rem; background: rgba(17,212,17,0.1); border-radius: 1rem; display: flex; align-items: center; justify-content: center; color: var(--primary); margin: 0 auto 1.5rem;">
                     <span class="material-symbols-outlined"
-                        style="font-size: 1.75rem; font-variation-settings: 'FILL' 1;">assignment</span>
+                        style="font-size: 1.75rem; font-variation-settings: 'FILL' 1;">backpack</span>
                 </div>
-                <h3 style="font-size: 1.125rem; margin-bottom: 0.5rem;">Essential Forms</h3>
+                <h3 style="font-size: 1.125rem; margin-bottom: 0.5rem;">10 Essentials</h3>
                 <p style="color: var(--slate-500); font-size: 0.8125rem; margin-bottom: 1.5rem; line-height: 1.5;">
-                    Medical consent and activity permission slips for all scouts.</p>
+                    The survival items every scout must carry on every outdoor adventure.</p>
                 <a href="resources/ten-essentials.html"
                     style="color: var(--primary); font-weight: 700; font-size: 0.8125rem; display: inline-flex; align-items: center; gap: 0.4rem;">
                     Browse Essentials <span class="material-symbols-outlined"
