Update Troop 93 address to Kiwanis Youth Park in all footers

--- a/gallery.html
+++ b/gallery.html
@@ -269,7 +269,7 @@
                         <div class="flex items-start gap-3">
                             <span class="material-symbols-outlined"
                                 style="color: var(--primary); font-size: 1.25rem;">location_on</span>
-                            <p class="footer-link">Community Center Hall<br>123 Scout Way, Forest Park, CA</p>
+                            <p class="footer-link">Kiwanis Youth Park<br>386 W Truslow Ave, Fullerton, CA 92832</p>
                         </div>
                         <div class="flex items-start gap-3">
                             <span class="material-symbols-outlined"
