Standardize all troop location references to Kiwanis Youth Park across the site

--- a/about.html
+++ b/about.html
@@ -170,8 +170,8 @@
                                 <span class="material-icons" style="font-size: 1.25rem;">place</span>
                             </div>
                             <div>
-                                <p style="font-weight: 700;">Fullerton Community Center</p>
-                                <p style="font-size: 0.875rem; color: var(--slate-500);">340 W Commonwealth Ave,
+                                <p style="font-weight: 700;">Kiwanis Youth Park</p>
+                                <p style="font-size: 0.875rem; color: var(--slate-500);">386 W Truslow Ave,
                                     Fullerton, CA 92832</p>
                             </div>
                         </div>
