--- a/resources/join-bsa.html
+++ b/resources/join-bsa.html
@@ -107,8 +107,8 @@
                 <ol class="flex flex-col gap-6" style="font-size: 0.9375rem; counter-reset: step-counter;">
                     <li style="display: flex; gap: 1rem;">
                         <span style="font-weight: 800; color: var(--primary);">01</span>
-                        <span><strong>Visit a Meeting:</strong> Join us on any Tuesday at 7:00 PM at the Fullerton
-                            Community Center.</span>
+                        <span><strong>Visit a Meeting:</strong> Join us on any Tuesday at 7:00 PM at Kiwanis Youth Park,
+                            386 W Truslow Ave, Fullerton, CA 92832.</span>
                     </li>
                     <li style="display: flex; gap: 1rem;">
                         <span style="font-weight: 800; color: var(--primary);">02</span>
