--- a/contact.html
+++ b/contact.html
@@ -131,8 +131,8 @@
                             </div>
                             <div>
                                 <p style="font-weight: 700;">Meeting Location</p>
-                                <p style="font-size: 0.875rem; color: var(--slate-500);">Fullerton Community
-                                    Center<br>340 W Commonwealth Ave, Fullerton, CA 92832</p>
+                                <p style="font-size: 0.875rem; color: var(--slate-500);">Kiwanis Youth Park<br>386 W
+                                    Truslow Ave, Fullerton, CA 92832</p>
                             </div>
                         </div>
                         <div class="flex items-start gap-4">
