--- a/join.html
+++ b/join.html
@@ -109,7 +109,8 @@
                 <div class="flex flex-col gap-4">
                     <div class="flex items-center gap-3">
                         <span class="material-symbols-outlined" style="color: var(--primary);">location_on</span>
-                        <span style="font-weight: 700;">Fullerton Community Center</span>
+                        <span style="font-weight: 700;">Kiwanis Youth Park, 386 W Truslow Ave, Fullerton, CA
+                            92832</span>
                     </div>
                     <div class="flex items-center gap-3">
                         <span class="material-symbols-outlined" style="color: var(--primary);">calendar_today</span>
