Update website branding with official logo/favicon and expand About Troop information

--- a/about.html
+++ b/about.html
@@ -17,6 +17,9 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/images/troop93_logo.png">
+
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -28,8 +31,9 @@
         <div class="container flex items-center justify-between" style="height: 5rem;">
             <div class="flex items-center gap-3">
                 <div
-                    style="background-color: var(--primary); color: var(--forest); padding: 0.4rem; border-radius: 0.5rem; display: flex; align-items: center;">
-                    <span class="material-symbols-outlined" style="font-weight: bold;">explore</span>
+                    style="width: 2.5rem; height: 2.5rem; display: flex; align-items: center; justify-content: center; overflow: hidden;">
+                    <img src="assets/images/troop93_logo.png" alt="Troop 93 Logo"
+                        style="width: 100%; height: 100%; object-fit: contain;">
                 </div>
                 <h2 style="font-size: 1.25rem; font-weight: 800; letter-spacing: -0.025em;">Troop 93</h2>
             </div>
@@ -65,16 +69,43 @@
                         1922</span>
                     <h1 style="font-size: clamp(2.5rem, 5vw, 4rem); margin-bottom: 2rem;">A Century of <br><span
                             style="color: var(--primary);">Fullerton Heritage.</span></h1>
-                    <p style="font-size: 1.125rem; color: var(--slate-600); margin-bottom: 1.5rem; line-height: 1.7;">
-                        For over 100 years, Troop 93 has been a cornerstone of the Fullerton community. Founded in 1922,
-                        we are one of the oldest scouting organizations in Southern California, dedicated to fostering
-                        growth, adventure, and leadership.
-                    </p>
-                    <p style="font-size: 1.125rem; color: var(--slate-600); line-height: 1.7;">
-                        What started as a small group of ambitious local youth has evolved into a thriving community of
-                        scouts who carry forward the traditions of excellence, service, and environmental stewardship
-                        that defined our founders.
-                    </p>
+                    <div class="flex flex-col gap-6"
+                        style="font-size: 1.125rem; color: var(--slate-600); line-height: 1.7;">
+                        <p>
+                            At Troop 93, we believe in the core values of Scouting. We are building the leaders of
+                            tomorrow by emphasizing leadership and character in all of our programs. We make vigorous
+                            use of the BSA Patrol Method, which emphasizes boy leadership and personal responsibility.
+                        </p>
+                        <p>
+                            Our Troop program is planned and executed by the Scouts themselves, based on their interests
+                            and the needs of the Troop. The advancement program is supported by Troop activities, but
+                            the pace of an individual Scout’s advancement is dependent, to a great degree, on his own
+                            initiative.
+                        </p>
+                        <p>
+                            The outdoor program offers something for everyone, from events designed for first year
+                            Scouts to a full High Adventure program for our older and higher ranking Scouts.
+                        </p>
+                        <p>
+                            Leadership skills are developed through the use of the Patrol Method and the Patrol Leaders
+                            Council (monthly planning meeting incorporating the patrol leaders with adult guidance).
+                        </p>
+                        <p>
+                            Self-discipline and self-sufficiency of the young men is developed through monthly camping
+                            opportunities. Individual accomplishment is met through advancement within the Boy Scout
+                            program.
+                        </p>
+                        <p>
+                            Troop 93 is guided using the “two deep” leadership method by registered and trained adult
+                            leaders at all times during each meeting and function. All adult leaders are required to
+                            have current Youth Protection certification and have completed all leader specific training
+                            as required for their position in the Troop.
+                        </p>
+                        <p>
+                            New leaders and committee members are always welcome. Parental involvement is a very
+                            important ingredient to maintaining our strong Troop.
+                        </p>
+                    </div>
                 </div>
                 <div class="relative">
                     <div
