--- a/gallery.html
+++ b/gallery.html
@@ -15,6 +15,9 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
         rel="stylesheet">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/images/troop93_logo.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Styles -->
@@ -103,8 +106,9 @@
         <div class="container flex items-center justify-between" style="height: 5rem;">
             <div class="flex items-center gap-3">
                 <div
-                    style="background-color: var(--primary); color: var(--forest); padding: 0.4rem; border-radius: 0.5rem; display: flex; align-items: center;">
-                    <span class="material-symbols-outlined" style="font-weight: bold;">explore</span>
+                    style="width: 2.5rem; height: 2.5rem; display: flex; align-items: center; justify-content: center; overflow: hidden;">
+                    <img src="assets/images/troop93_logo.png" alt="Troop 93 Logo"
+                        style="width: 100%; height: 100%; object-fit: contain;">
                 </div>
                 <h2 style="font-size: 1.25rem; font-weight: 800; letter-spacing: -0.025em;">Troop 93</h2>
             </div>
