--- a/leadership.html
+++ b/leadership.html
@@ -17,6 +17,9 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/images/troop93_logo.png">
+
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -28,8 +31,9 @@
         <div class="container flex items-center justify-between" style="height: 5rem;">
             <div class="flex items-center gap-3">
                 <div
-                    style="background-color: var(--primary); color: var(--forest); padding: 0.4rem; border-radius: 0.5rem; display: flex; align-items: center;">
-                    <span class="material-symbols-outlined" style="font-weight: bold;">explore</span>
+                    style="width: 2.5rem; height: 2.5rem; display: flex; align-items: center; justify-content: center; overflow: hidden;">
+                    <img src="assets/images/troop93_logo.png" alt="Troop 93 Logo"
+                        style="width: 100%; height: 100%; object-fit: contain;">
                 </div>
                 <h2 style="font-size: 1.25rem; font-weight: 800; letter-spacing: -0.025em;">Troop 93</h2>
             </div>
