Remove Legacy Point image and caption from about page

--- a/about.html
+++ b/about.html
@@ -107,23 +107,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="relative">
-                    <div
-                        style="position: absolute; inset: 0; background: rgba(17,212,17,0.1); border-radius: 1rem; transform: rotate(3deg); z-index: -1;">
-                    </div>
-                    <img src="https://lh3.googleusercontent.com/aida-public/AB6AXuDfbACQJsK8eD4VkUFyxsnGrnKvcCddgTTpiHU2oBV22-cVu1qUGZ3HtodWqBBwB6-ieA8b--1kAi6CSTxSeW5TCoWqJC02VN6g6fD0umMb_abEsikhO5XlXeWRDaSVkLqeAFQa5bChOlfYSWfaQwI9SLLp7yT3dVYlzC9xi-0HAGF7lXutiEQSxCfqBmBScxXcA0tiy1loYIpsSdEeXN2_6U-SLH9rMewUkjBiGPDGz9MLxJwbg9mV8chTUYbWkRdfbIIYVZAvCHQ"
-                        style="width: 100%; border-radius: 1rem; filter: grayscale(100%); transition: filter 0.5s ease; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);"
-                        onmouseover="this.style.filter='grayscale(0%)'"
-                        onmouseout="this.style.filter='grayscale(100%)'">
-                    <div
-                        style="position: absolute; bottom: -1rem; right: -1rem; background: var(--white); padding: 1.5rem; border-radius: 1rem; box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1); max-width: 12rem; border: 1px solid rgba(17,212,17,0.1);">
-                        <p
-                            style="font-size: 0.75rem; font-weight: 800; color: var(--primary); margin-bottom: 0.25rem; text-transform: uppercase;">
-                            Legacy Point</p>
-                        <p style="font-size: 0.875rem; font-weight: 500;">Troop 93's first summer camp in the Sierras,
-                            1924.</p>
-                    </div>
-                </div>
+                <div></div>
             </div>
         </div>
     </section>
