Rename Member Portal to Troop Web Host Login site-wide

--- a/eagles.html
+++ b/eagles.html
@@ -48,8 +48,8 @@
 
             <div class="flex items-center gap-4">
                 <a href="https://www.troopwebhost.org/Troop93Fullerton/Index.htm" target="_blank" class="hidden md-flex"
-                    style="font-size: 0.875rem; font-weight: 700; border: 1px solid rgba(13,27,18,0.2); padding: 0.5rem 1rem; border-radius: 0.5rem;">Member
-                    Portal</a>
+                    style="font-size: 0.875rem; font-weight: 700; border: 1px solid rgba(13,27,18,0.2); padding: 0.5rem 1rem; border-radius: 0.5rem;">Troop
+                    Web Host Login</a>
                 <button class="md-hidden mobile-menu-btn">
                     <span class="material-symbols-outlined">menu</span>
                 </button>
