--- a/calendar.html
+++ b/calendar.html
@@ -13,8 +13,7 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
-        rel="stylesheet">
+    <link rel="icon" type="image/png" href="assets/images/troop93_logo.png">
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
@@ -44,8 +43,9 @@
         <div class="container flex items-center justify-between" style="height: 5rem;">
             <div class="flex items-center gap-3">
                 <div
-                    style="background-color: var(--primary); color: var(--forest); padding: 0.4rem; border-radius: 0.5rem; display: flex; align-items: center;">
-                    <span class="material-symbols-outlined" style="font-weight: bold;">explore</span>
+                    style="width: 2.5rem; height: 2.5rem; display: flex; align-items: center; justify-content: center; overflow: hidden;">
+                    <img src="assets/images/troop93_logo.png" alt="Troop 93 Logo"
+                        style="width: 100%; height: 100%; object-fit: contain;">
                 </div>
                 <h2 style="font-size: 1.25rem; font-weight: 800; letter-spacing: -0.025em;">Troop 93</h2>
             </div>
@@ -61,9 +61,9 @@
             </nav>
 
             <div class="flex items-center gap-4">
-                <a href="https://www.TroopWebHost.org" target="_blank" class="hidden md-flex"
-                    style="font-size: 0.875rem; font-weight: 700; border: 1px solid rgba(13,27,18,0.2); padding: 0.5rem 1rem; border-radius: 0.5rem;">Member
-                    Portal</a>
+                <a href="https://www.troopwebhost.org/Troop93Fullerton/Index.htm" target="_blank" class="hidden md-flex"
+                    style="font-size: 0.875rem; font-weight: 700; border: 1px solid rgba(13,27,18,0.2); padding: 0.5rem 1rem; border-radius: 0.5rem;">Troop
+                    Web Host Login</a>
                 <button class="md-hidden mobile-menu-btn">
                     <span class="material-symbols-outlined">menu</span>
                 </button>
@@ -156,7 +156,8 @@
 
             <div style="border-top: 1px solid rgba(255,255,255,0.05); padding-top: 2rem;"
                 class="flex flex-col md-flex-row justify-between items-center gap-4">
-                <p style="font-size: 0.75rem; color: rgba(255,255,255,0.4);">© 2024 BSA Troop 93. All rights reserved.
+                <p style="font-size: 0.75rem; color: rgba(255,255,255,0.4);">© 2026 Troop 93, Fullerton. All rights
+                    reserved.
                 </p>
                 <div class="flex gap-6">
                     <a href="#" class="footer-link" style="font-size: 0.75rem;">Privacy Policy</a>
